--- a/client/src/components/login/RegisterForm.css
+++ b/client/src/components/login/RegisterForm.css
@@ -19,6 +19,7 @@
     align-items: center;
     font-weight: 800;
     font-size: 17px;
+    font-family: cursive;
   }
   
   .alert-message {
@@ -31,6 +32,61 @@
     border: none;
     color: #fff;
     cursor: pointer;
+    font-family: cursive;
   }
   
-  
+  /* General Styles */
+.form-container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border-radius: 5px;
+}
+
+.form-container label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.form-container input[type="text"],
+.form-container input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
+.form-container button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: rgb(212, 63, 63);
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  font-family: cursive;
+}
+
+.form-container p {
+  margin-top: 20px;
+  font-family: cursive;
+  text-align: center;
+}
+
+.form-container a {
+  color: #4caf50;
+  font-family: cursive;
+  text-align: center;
+
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 480px) {
+  .form-container {
+    max-width: 300px;
+  }
+}
